# rust-analyzer-cleanup

./: Cargo.toml  LICENSE  README.md
src/watcher/: main.rs
