[package]
name = "rust-analyzer-cleanup"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "rust_analyzer_cleanup_watcher"
path = "src/watcher/main.rs"

[lib]
name = "rust_analyzer_cleanup"
path = "src/library/lib.rs"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.48"
features = [
	"implement",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Com",
	"Win32_System_Console",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory",
	"Win32_System_Ole",
	"Win32_System_Rpc",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_System_Wmi"
]
